Add Render deployment config with PostgreSQL support